fixed small whitespace around images

--- a/src/static/scripts/components/mediaViewer/imageViewer/_imageView.scss
+++ b/src/static/scripts/components/mediaViewer/imageViewer/_imageView.scss
@@ -9,6 +9,7 @@
 		width: 100%;
 		height: 100%;
 		object-fit: contain;
+		display: block;
 
 		&:not(:first-child) {
 			position: absolute;
